# NewsViewerCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: imconfig.h  news_fetcher.h  news_storage.h  ui.h
src/: news_fetcher.cpp  news_storage.cpp  ui.cpp
